--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,90 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+        <title>{% block title %}{% endblock %} - Pilgrims</title>
+
+        {% block stylesheets %}
+            <link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,700,300,600,800,400" rel="stylesheet">
+            {% stylesheets
+                "css/bootstrap.min.css"
+                "css/main.css"
+                filter="cssrewrite" output="css/compiled/app.css" %}
+                <link rel="stylesheet" href="{{ asset_url }}" />
+            {% endstylesheets %}
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        {% endblock %}
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                    <a href="//www.unifr.ch"><img src="{{ asset('images/unifr_universite_cut.png') }}" alt="Unifr"></a>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <div class="application-title">
+                        <a href="//www.unifr.ch/centredelangues/fr/Auto">Sciences historiques | Historische Wissenschaften</a><br>
+                        <a href="//www.unifr.ch/centredelangues">Faculté des Lettres | Philosophische Fakultät</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <nav class="navbar navbar-default">
+                        <div class="container-fluid">
+                            <!-- Brand and toggle get grouped for better mobile display -->
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar-collapse">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
+                                <span class="navbar-brand">Pilgrims</span>
+                            </div>
+
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="main-navbar-collapse">
+                                <ul class="nav navbar-nav">
+                                    <li class="active"><a href="{{ path('sites_index') }}">Sites</a></li>
+                                </ul>
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li><a href="#">Contact</a></li>
+                                </ul>
+                            </div><!-- /.navbar-collapse -->
+                        </div><!-- /.container-fluid -->
+                    </nav>
+                </div>
+            </div>
+
+            {% block body %}{% endblock %}
+
+            <div class="application-footer">
+                &copy; Pilgrims - <a href="//nte.unifr.ch">Centre NTE</a> - University of Fribourg
+            </div>
+        </div>
+
+        {% block javascripts %}
+            <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+            {% javascripts
+                "js/bootstrap.min.js"
+                "js/pilgrims.js"
+                output="js/compiled/app.js" %}
+                <script src="{{ asset_url }}"></script>
+            {% endjavascripts %}
+        {% endblock %}
     </body>
 </html>
