add popup for images

--- a/app/Resources/views/sites/index.html.twig
+++ b/app/Resources/views/sites/index.html.twig
@@ -9,7 +9,7 @@
         {% for site in sites %}
             <div class="grid-item col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="{{ vich_uploader_asset(site, 'imageFile') }}" alt="{{ site.title }}" >
+                    <a href="{{ vich_uploader_asset(site, 'imageFile') }}" class="image-popup"><img src="{{ vich_uploader_asset(site, 'imageFile') }}" alt="{{ site.title }}" ></a>
                     <div class="caption">
                         <h3>{{ site.title }}</h3>
                         <p>{{ site.explanations }}</p>
@@ -18,7 +18,7 @@
                                 <i class="fa fa-location-arrow" aria-hidden="true"></i> <strong>{{ site.latitude }}</strong>, <strong>{{ site.longitude }}</strong>
                             </div>
                             <div class="col-sm-6 text-right">
-                                <a href="#" class="btn btn-info">Details</a>
+                                <a href="{{ path('sites_show', {'id': site.id}) }}" class="btn btn-info">Details</a>
                             </div>
                         </div>
                     </div>
