--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,6 +12,7 @@
             <link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,700,300,600,800,400" rel="stylesheet">
             {% stylesheets
                 "css/bootstrap.min.css"
+                "css/magnific-popup.css"
                 "css/main.css"
                 filter="cssrewrite" output="css/compiled/app.css" %}
                 <link rel="stylesheet" href="{{ asset_url }}" />
@@ -81,6 +82,7 @@
             <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
             {% javascripts
                 "js/bootstrap.min.js"
+                "js/jquery.magnific-popup.min.js"
                 "js/pilgrims.js"
                 output="js/compiled/app.js" %}
                 <script src="{{ asset_url }}"></script>
