sources and relations

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -37,8 +37,8 @@
                 </div>
                 <div class="col-xs-12 col-sm-6">
                     <div class="application-title">
-                        <a href="//www.unifr.ch/centredelangues/fr/Auto">Sciences historiques | Historische Wissenschaften</a><br>
-                        <a href="//www.unifr.ch/centredelangues">Faculté des Lettres | Philosophische Fakultät</a>
+                        <a href="//lettres.unifr.ch/fr/hist.html">Sciences historiques | Historische Wissenschaften</a><br>
+                        <a href="//www3.unifr.ch/lettres">Faculté des Lettres | Philosophische Fakultät</a>
                     </div>
                 </div>
             </div>
