--- a/app/Resources/views/sites/index.html.twig
+++ b/app/Resources/views/sites/index.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
   <div id="sites">
+    <p>remote: {{ remote }}</p>
     <h1>Sites <small>{{ sites|length }}</small></h1>
     <hr>
     <div class="grid row">
