--- a/app/Resources/views/sites/index.html.twig
+++ b/app/Resources/views/sites/index.html.twig
@@ -6,31 +6,19 @@
   <div id="sites">
     <h1>Sites <small>{{ sites|length }}</small></h1>
     <hr>
-    <div class="grid row">
+    <div class="row">
       {% for site in sites %}
-      <div class="grid-item col-sm-6 col-md-4">
+      <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
-          <a href="{{ vich_uploader_asset(site, 'imageFile') }}" class="image-popup"><img src="{{ vich_uploader_asset(site, 'imageFile') }}" alt="{{ site.title }}" ></a>
+          <a href="{{ vich_uploader_asset(site, 'imageFile') }}" class="image-popup"><img src="{{ vich_uploader_asset(site, 'imageFile') | imagine_filter('index_thumb') }}" alt="{{ site.title }}" ></a>
           <div class="caption">
             <h3>{{ site.title }}</h3>
-            <p>{{ site.explanations }}</p>
-            <div class="row">
-              <div class="col-sm-6">
-                <i class="fa fa-location-arrow" aria-hidden="true"></i> <strong>{{ site.latitude }}</strong>, <strong>{{ site.longitude }}</strong>
-              </div>
-              <div class="col-sm-6 text-right">
-                <a href="{{ path('sites_show', {'id': site.id}) }}" class="btn btn-info">Details</a>
-              </div>
-            </div>
+            <p><i class="fa fa-location-arrow" aria-hidden="true"></i> {{ site.latitude}} , {{ site.longitude }}</p>
+            <p><a href="{{ path('sites_show', {'id': site.id}) }}" class="btn btn-info btn-block">Details</a></p>
           </div>
         </div>
       </div>
       {% endfor %}
     </div>
   </div>
-{% endblock %}
-
-{% block javascripts %}
-  {{ parent() }}
-  <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
 {% endblock %}
