--- a/app/Resources/views/sites/index.html.twig
+++ b/app/Resources/views/sites/index.html.twig
@@ -8,16 +8,17 @@
     <hr>
     <div class="row">
       {% for site in sites %}
-      <div class="col-sm-6 col-md-3">
-        <div class="thumbnail">
-          <a href="{{ vich_uploader_asset(site, 'imageFile') }}" class="image-popup"><img src="{{ vich_uploader_asset(site, 'imageFile') | imagine_filter('index_thumb') }}" alt="{{ site.title }}" ></a>
-          <div class="caption">
-            <h3>{{ site.title }}</h3>
-            <p><i class="fa fa-location-arrow" aria-hidden="true"></i> {{ site.latitude}} , {{ site.longitude }}</p>
-            <p><a href="{{ path('sites_show', {'id': site.id}) }}" class="btn btn-info btn-block">Details</a></p>
-          </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="{{ path('sites_show', {'id': site.id}) }}">
+            <div class="thumbnail">
+              <img src="{{ vich_uploader_asset(site, 'imageFile') | imagine_filter('index_thumb') }}" alt="{{ site.title }}" >
+              <div class="caption">
+                <h3>{{ site.title }}</h3>
+                <p><i class="fa fa-location-arrow" aria-hidden="true"></i> {{ site.latitude}} , {{ site.longitude }}</p>
+              </div>
+            </div>
+          </a>
         </div>
-      </div>
       {% endfor %}
     </div>
   </div>
