--- a/app/Resources/views/sites/show.html.twig
+++ b/app/Resources/views/sites/show.html.twig
@@ -18,11 +18,11 @@
       </div>
       <div class="col-xs-12">
         {% if site.toponyms is not empty %}
-        <p class="well">
-          {% for toponym in site.toponyms %}
-          <i class="fa fa-tag" aria-hidden="true"></i> {{ toponym.title }}
-          {% endfor %}
-        </p>
+          <p class="well">
+            {% for toponym in site.toponyms %}
+              <i class="fa fa-tag" aria-hidden="true"></i> {{ toponym.title }}
+            {% endfor %}
+          </p>
         {% endif %}
       </div>
     </div>
@@ -37,34 +37,14 @@
       </div>
     </div>
     <div class="row grid">
-      {% include '_element.html.twig' with {'title': 'Explanations', 'element': site.explanations } %}
-      {% include '_element.html.twig' with {'title': 'History', 'element': site.history } %}
-      {% include '_element.html.twig' with {'title': 'Archaeological data', 'element': site.archaeologicalData } %}
-      {% include '_element.html.twig' with {'title': 'Environmental context', 'element': site.environmentalContext } %}
-      <div class="col-sm-6 grid-item">
-        <h3>Memorial functions</h3>
-        <p>{{ site.memorialFunctions }}</p>
-        {% if site.memorialFunctionsKeywords is not empty %}
-        <p>
-          {% for memorialFunctionsKeyword in site.memorialFunctionsKeywords %}
-          <i class="fa fa-tag" aria-hidden="true"></i> {{ memorialFunctionsKeyword.title }}
-          {% endfor %}
-        </p>
-        {% endif %}
-      </div>
-      {% include '_element.html.twig' with {'title': 'Liturgical habits', 'element': site.liturgicalHabits } %}
-      {% include '_element.html.twig' with {'title': 'Cultic phenomena', 'element': site.culticPhenomena } %}
-      <div class="col-sm-6 grid-item">
-        <h3>Cult objects</h3>
-        <p>{{ site.cultObjects }}</p>
-        {% if site.cultObjectsKeywords is not empty %}
-        <p>
-          {% for cultObjectsKeyword in site.cultObjectsKeywords %}
-          <i class="fa fa-tag" aria-hidden="true"></i> {{ cultObjectsKeyword.title }}
-          {% endfor %}
-        </p>
-        {% endif %}
-      </div>
+      {% include '_element.html.twig' with { 'title': 'Explanations', 'element': site.explanations } %}
+      {% include '_element.html.twig' with { 'title': 'History', 'element': site.history } %}
+      {% include '_element.html.twig' with { 'title': 'Archaeological data', 'element': site.archaeologicalData } %}
+      {% include '_element.html.twig' with { 'title': 'Environmental context', 'element': site.environmentalContext } %}
+      {% include '_element.html.twig' with { 'title': 'Memorial functions', 'element': site.memorialFunctions, 'keywords': site.memorialFunctionsKeywords } %}
+      {% include '_element.html.twig' with { 'title': 'Liturgical habits', 'element': site.liturgicalHabits } %}
+      {% include '_element.html.twig' with { 'title': 'Cultic phenomena', 'element': site.culticPhenomena } %}
+      {% include '_element.html.twig' with { 'title': 'Cult objects', 'element': site.cultObjects, 'keywords': site.cultObjectsKeywords } %}
       {% include '_element.html.twig' with {'title': 'Additional data', 'element': site.additionalData } %}
       <div class="col-sm-6 grid-item">
         <h3>Sources</h3>
@@ -77,16 +57,8 @@
           {% endfor %}
         </ul>
       </div>
-      <div class="col-sm-6 grid-item">
-        <h3>Historical sources</h3>
-        <ul class="fa-ul">
-          {% for historicalSource in site.historicalSources %}
-          <li><a data-toggle="modal" data-target="#historicalSourcesModal{{ historicalSource.id }}" class="pointer"><i class="fa-li fa fa-book"></i>{{ historicalSource.title }}</a></li>
-          {% include 'sites/historicalSources_modal.html.twig' %}
-          {% endfor %}
-        </ul>
-      </div>
-      {% include '_literatures.html.twig' with {'element': site } %}
+      {% include '_modal.html.twig' with { 'elements': site.historicalSources, 'title': 'Historical source', 'type': 'historicalSources' } %}
+      {% include '_modal.html.twig' with { 'elements': site.literatures, 'title': 'Literature', 'type': 'literatures' } %}
     </div>
   </div>
 {% endblock %}
