--- a/app/Resources/views/sources/show.html.twig
+++ b/app/Resources/views/sources/show.html.twig
@@ -18,12 +18,12 @@
         </div>
     </div>
     <div class="row grid">
-        {% include '_element.html.twig' with {'title': 'Traveler', 'element': source.traveler } %}
-        {% include '_element.html.twig' with {'title': 'Year', 'element': source.year } %}
-        {% include '_element.html.twig' with {'title': 'Editions', 'element': source.editions } %}
-        {% include '_element.html.twig' with {'title': 'Itinerary', 'element': source.itinerary } %}
-        {% include '_element.html.twig' with {'title': 'Excerpt', 'element': source.content } %}
-        {% include '_literatures.html.twig' with {'element': source } %}
+        {% include '_element.html.twig' with { 'title': 'Traveler', 'element': source.traveler } %}
+        {% include '_element.html.twig' with { 'title': 'Year', 'element': source.year } %}
+        {% include '_element.html.twig' with { 'title': 'Editions', 'element': source.editions } %}
+        {% include '_element.html.twig' with { 'title': 'Itinerary', 'element': source.itinerary } %}
+        {% include '_element.html.twig' with { 'title': 'Excerpt', 'element': source.content } %}
+        {% include '_modal.html.twig' with { 'elements': source.literatures, 'title': 'Literature', 'type': 'literatures' } %}
     </div>
 {% endblock %}
 
