--- a/app/Resources/views/sites/index.html.twig
+++ b/app/Resources/views/sites/index.html.twig
@@ -11,7 +11,11 @@
         <div class="col-sm-6 col-md-3">
           <a href="{{ path('sites_show', {'id': site.id}) }}">
             <div class="thumbnail">
-              <img src="{{ ('/uploads/images/sites/' ~ site.imageName) | imagine_filter('index_thumb') }}" alt="{{ site.title }}" >
+              {% if site.imageName is empty %}
+                <img src="{{ ('/images/void.png') | imagine_filter('index_thumb') }}" alt="{{ site.title }}" >
+              {% else %}
+                <img src="{{ ('/uploads/images/sites/' ~ site.imageName) | imagine_filter('index_thumb') }}" alt="{{ site.title }}" >
+              {% endif %}
               <div class="caption">
                 <h3>{{ site.title }}</h3>
                 <p><i class="fa fa-location-arrow" aria-hidden="true"></i> {{ site.latitude}} , {{ site.longitude }}</p>
