fix nte link as it's not https yet

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -74,7 +74,7 @@
             {% block body %}{% endblock %}
 
             <div class="application-footer">
-                &copy; Pilgrims - <a href="//nte.unifr.ch">Centre NTE</a> - University of Fribourg
+                &copy; Pilgrims - <a href="http://nte.unifr.ch">Centre NTE</a> - University of Fribourg
             </div>
         </div>
 
