--- a/app/Resources/views/sites/index.html.twig
+++ b/app/Resources/views/sites/index.html.twig
@@ -18,7 +18,11 @@
               {% endif %}
               <div class="caption">
                 <h3>{{ site.title }}</h3>
-                <p><i class="fa fa-location-arrow" aria-hidden="true"></i> {{ site.latitude}} , {{ site.longitude }}</p>
+                <p>
+                  {% for toponym in site.toponyms %}
+                    <i class="fa fa-tag" aria-hidden="true"></i> {{ toponym.title }}
+                  {% endfor %}
+                </p>
               </div>
             </div>
           </a>
