--- a/app/Resources/views/sites/index.html.twig
+++ b/app/Resources/views/sites/index.html.twig
@@ -17,12 +17,13 @@
                 <img src="{{ ('/uploads/images/sites/' ~ site.imageName) | imagine_filter('index_thumb') }}" alt="{{ site.title }}" >
               {% endif %}
               <div class="caption">
-                <h3>{{ site.title }}</h3>
+                <h3>{{ site.title | markdown }}</h3>
                 <p>
                   {% for toponym in site.toponyms %}
-                    <i class="fa fa-tag" aria-hidden="true"></i> {{ toponym.title }}
+                    <i class="fa fa-map-marker" aria-hidden="true"></i> {{ toponym.title }}&nbsp;
                   {% endfor %}
                 </p>
+                <p><i class="fa fa-location-arrow" aria-hidden="true"></i> {{ site.latitude}} , {{ site.longitude }}</p>
               </div>
             </div>
           </a>
