--- a/app/Resources/views/sites/show.html.twig
+++ b/app/Resources/views/sites/show.html.twig
@@ -12,25 +12,41 @@
         </ol>
       </div>
     </div>
+
     <div class="row">
       <div class="col-xs-12">
-        <h1>{{ site.title }} <small><i class="fa fa-location-arrow" aria-hidden="true"></i> {{ site.latitude }}, {{ site.longitude }}</small></h1>
-      </div>
-      <div class="col-xs-12">
-        {% if site.toponyms is not empty %}
-          <p class="well">
-            {% for toponym in site.toponyms %}
-              <i class="fa fa-tag" aria-hidden="true"></i> {{ toponym.title }}
-            {% endfor %}
-          </p>
-        {% endif %}
+        <h1>{{ site.title | markdown }}</h1>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="well">
+          {% if site.toponyms is not empty %}
+            <div class="row">
+              <div class="col-xs-6">
+                {% for toponym in site.toponyms %}
+                  <strong><i class="fa fa-map-marker" aria-hidden="true"></i> {{ toponym.title }}</strong>
+                {% endfor %}
+              </div>
+              <div class="col-xs-6">
+                <strong><i class="fa fa-location-arrow" aria-hidden="true"></i> {{ site.latitude }}, {{ site.longitude }}</strong>
+              </div>
+            </div>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+
     <div class="row">
       <div id="image" class="col-sm-6">
         {% if site.imageName is not empty %}
           <a href="{{ vich_uploader_asset(site, 'imageFile') }}" class="thumbnail image-popup">
             <img src="{{ vich_uploader_asset(site, 'imageFile') }}" alt="{{ site.title }}" >
+          </a>
+        {% else %}
+          <a href="#" class="thumbnail">
+            <img src="{{ ('/images/void_show.png') }}" alt="{{ site.title }}" >
           </a>
         {% endif %}
       </div>
@@ -40,35 +56,111 @@
         {% endif %}
       </div>
     </div>
-    <div class="row grid">
-      {% include '_element.html.twig' with { 'title': 'Explanations', 'element': site.historicalNames } %}
-      {% include '_element.html.twig' with { 'title': 'History', 'element': site.history } %}
-      {% include '_element.html.twig' with { 'title': 'Archaeological data', 'element': site.archaeologicalData } %}
-      {% include '_element.html.twig' with { 'title': 'Environmental context', 'element': site.environmentalContext } %}
-      {% include '_element.html.twig' with { 'title': 'Memorial functions', 'element': site.memorialFunctions, 'keywords': site.memorialFunctionsKeywords } %}
-      {% include '_element.html.twig' with { 'title': 'Liturgical habits', 'element': site.liturgicalHabits } %}
-      {% include '_element.html.twig' with { 'title': 'Cult objects', 'element': '', 'keywords': site.culticPhenomenaKeywords } %}
-      {% include '_element.html.twig' with {'title': 'Additional data', 'element': site.additionalData } %}
-      <div class="col-sm-6 grid-item">
-        <h3>Sources</h3>
-        <blockquote>
-          <p>{{ site.sourcesQuotation }}</p>
-        </blockquote>
-        <ul class="fa-ul">
-          {% for source in site.sources %}
-            <li><a href="{{ path('sources_show', {'id': source.id, 'site_id': site.id}) }}"><i class="fa-li fa fa-book"></i>{{ source.__toString }}</a></li>
-          {% endfor %}
-        </ul>
+
+    <div class="row">
+      <div class="panel-group col-xs-12" id="accordion" role="tablist" aria-multiselectable="true">
+        {% 
+          include '_accordion/panel.html.twig' with { 
+            'id': 'historicalNames',
+            'parent': '#accordion',
+            'expanded': true,
+            'title': 'Historical names',
+            'content': site.historicalNames
+          }
+        %}
+        {% 
+          include '_accordion/panel-links.html.twig' with { 
+            'id': 'sources',
+            'parent': '#accordion',
+            'expanded': false,
+            'title': 'Sources',
+            'content': site.sourcesQuotation,
+            'links': site.sources
+          }
+        %}
+        {% 
+          include '_accordion/panel-modals.html.twig' with {   
+            'id': 'history',
+            'parent': '#accordion',
+            'expanded': false,
+            'title': 'History',
+            'content': site.history,
+            'modals': site.historicalSources
+          }
+        %}
+        {% 
+          include '_accordion/panel.html.twig' with { 
+            'id': 'archaeologicalData',
+            'parent': '#accordion',
+            'expanded': false,
+            'title': 'Archaeological data',
+            'content': site.archaeologicalData
+          }
+        %}
+        {% 
+          include '_accordion/panel.html.twig' with { 
+            'id': 'environmentalContext',
+            'parent': '#accordion',
+            'expanded': false,
+            'title': 'Environmental context',
+            'content': site.environmentalContext
+          }
+        %}
+        {% 
+          include '_accordion/panel-keywords.html.twig' with { 
+            'id': 'memorialFunctions',
+            'parent': '#accordion',
+            'expanded': false,
+            'title': 'Memorial functions',
+            'content': site.memorialFunctions,
+            'keywords': site.memorialFunctionsKeywords
+          }
+        %}
+        {% 
+          include '_accordion/panel.html.twig' with { 
+            'id': 'liturgicalHabits',
+            'parent': '#accordion',
+            'expanded': false,
+            'title': 'Liturgical habits',
+            'content': site.liturgicalHabits
+          }
+        %}
+        {% 
+          include '_accordion/panel-keywords.html.twig' with { 
+            'id': 'culticPhenomena',
+            'parent': '#accordion',
+            'expanded': false,
+            'title': 'Cultic phenomena',
+            'content': site.culticPhenomena,
+            'keywords': site.culticPhenomenaKeywords
+          }
+        %}
+        {% 
+          include '_accordion/panel.html.twig' with { 
+            'id': 'additionalData',
+            'parent': '#accordion',
+            'expanded': false,
+            'title': 'Additional data',
+            'content': site.additionalData
+          }
+        %}
+        {% 
+          include '_accordion/panel-modals.html.twig' with { 
+            'id': 'literature',
+            'parent': '#accordion',
+            'expanded': false,
+            'title': 'Literature',
+            'modals': site.literatures,
+            'content': ''
+          }
+        %}
       </div>
-      {% include '_modal.html.twig' with { 'elements': site.historicalSources, 'title': 'Historical source', 'type': 'historicalSources' } %}
-      {% include '_modal.html.twig' with { 'elements': site.literatures, 'title': 'Literature', 'type': 'literatures' } %}
     </div>
   </div>
 {% endblock %}
 
 {% block javascripts %}
   {{ parent() }}
-  <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
   <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHoXNJQewWtqxZs1NUWIOXUOjvUG936RM"></script>
 {% endblock %}
