fix void image of sites show view

--- a/app/Resources/views/sites/show.html.twig
+++ b/app/Resources/views/sites/show.html.twig
@@ -46,7 +46,7 @@
           </a>
         {% else %}
           <a href="#" class="thumbnail">
-            <img src="{{ ('/images/void_show.png') }}" alt="{{ site.title }}" >
+            <img src="{{ asset('images/void_show.png') }}" alt="{{ site.title }}" >
           </a>
         {% endif %}
       </div>
