--- a/app/Resources/views/sites/show.html.twig
+++ b/app/Resources/views/sites/show.html.twig
@@ -40,7 +40,7 @@
 
     <div class="row">
       <div id="image" class="col-sm-6">
-        {% if site.imageName is not empty %}
+        {% if false %}
           <a href="{{ vich_uploader_asset(site, 'imageFile') }}" class="thumbnail image-popup">
             <img src="{{ vich_uploader_asset(site, 'imageFile') }}" alt="{{ site.title }}" >
           </a>
