--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,6 +1,7 @@
 .pointer { cursor: pointer; }
 #sites a { text-decoration: none; }
 #sites .thumbnail .caption { height: 140px; }
+#site #map-container { padding-bottom: 65.5%; }
 
 /* better bootstrap collapse */
 #accordion .panel-heading { padding: 0;}
@@ -23,4 +24,11 @@
 
 blockquote {
     font-size: 13px;
+}
+
+.bottom-buffer {
+    margin-bottom: 10px;
+}
+.bottom-buffer .thumbnail {
+    margin-bottom: 0;
 }
