--- a/app/Resources/views/sites/index.html.twig
+++ b/app/Resources/views/sites/index.html.twig
@@ -14,7 +14,7 @@
               {% if site.images is empty %}
                 <img src="{{ ('/images/void.png') | imagine_filter('index_thumb') }}" alt="{{ site.title }}" >
               {% else %}
-                <img src="{{ ('/uploads/images/sites/' ~ site.images.first.imageName) | imagine_filter('index_thumb') }}" alt="{{ site.title }}" >
+                <img src="{{ vich_uploader_asset(site.images.first, 'imageFile') | imagine_filter('index_thumb') }}" alt="{{ site.title }}" >
               {% endif %}
               <div class="caption">
                 <h3>{{ site.title | markdown }}</h3>
